fixed padding and whitespace issues
looks good at 1280x680

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,10 @@ div.main-header > p {
   color: #5D6061;
 }
 
-div.brain-container {
-
+div.pure-g.content-section {
+  position: relative;
+  width: 100%;
+  height: 80%;
 }
 
 div.brain-description {
